src/components/main/main.module.css
.main-section {
  position: relative;
  background: url("../../assets/imgs/main-background-1.png");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  padding-top: 100px;
  height: 90svh;
  /* width: 100%; */
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

.h3 {
  position: relative;
  z-index: 10;
  width: 400px;
  margin-top: 10px;
  font-weight: normal;
  font-weight: 300;
}

.main-section::after {
  content: "";
  pointer-events: none;
  position: absolute;
  transform: rotate(180deg);
  width: 100%;
  height: 40%;
  top: 0;
  left: 0;
  background: linear-gradient(180deg, rgba(15, 23, 22, 0) 0%, #0f1716 100%);
}

.main-section::before {
  pointer-events: none;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  background: url("../../assets/imgs/main-background-2.png");
  background: linear-gradient(180deg, rgba(15, 23, 22, 0) 52.45%, #0f1716 100%);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  height: 100%;
  width: 100%;
}

h1 {
  position: relative;
  z-index: 3;
  font-size: 52px;
}

h3 {
  position: relative;
  text-align: center;
  z-index: 3;
  font-size: 18px;
}

.main-coin {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -80%);
  z-index: 2;
}

h2 {
  font-size: 50.4px;
  text-align: center;
  transform: translateY(-60px);
}

.h1 {
  margin-top: 200px;
}

.info {
  display: inline;
  position: relative;
  z-index: 100;
  margin-left: 5px;
  background: #ffffff1a;
  border-radius: 200px;
  padding: 2px 11px;
}

.info > div {
  display: none;
}

.info:hover > div {
  display: flex;
  position: absolute;
  top: -150px;
  left: 0;
  border-radius: 15px;
  padding: 20px;
  background: #0f1716;
  width: 400px;
  z-index: 1000;
}

.gif {
  position: absolute;
  left: 2%;
  bottom: 10%;
  width: 100px;
  border-radius: 15px;
}

.gif > img {
  width: 100px;
}

.info > span {
  color: white !important;
}

.info > span {
  color: white !important;
}

.button {
  display: none;
  justify-content: center;
  align-items: center;
  border: none;
  font-size: 20px;
  gap: 20px;
  background: linear-gradient(180deg, #219653 0%, #299c35 100%);
  padding: 25px 30px;
  border-radius: 20px;
  cursor: pointer;
  margin-top: 20px;
  /* width: 100%; */
  z-index: 1000;
}

@media (max-width: 1000px) {
  .h1 {
    font-size: 27px;
  }
  .main-coin {
    width: 280px;
  }
}

@media (max-width: 820px) {
  h1 {
    margin-top: 140px;
    font-size: 27px;
  }

  .info {
    display: none;
  }

  .main-coin {
    width: 280px;
  }

  .h3 {
    font-size: 16px;
  }

  .gif {
    margin-top: 40px;
    position: relative;
    bottom: 0;
    align-self: baseline;
  }
}

@media (max-width: 500px) {
  .main-coin {
    top: 45%;
    width: 190px;
  }

  .main-section {
    height: 110svh;
  }

  .button {
    display: flex;
  }
  .gif {
    align-self: center;
    position: relative;
    left: 0;
    bottom: 0;
    /* margin-top: 40px; */
  }

  .h3 {
    width: 100%;
  }
}

